src/objects/Mulesoft_Endpoint__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIMIT__c</fullName>
        <label>LIMIT</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mulesoft Endpoint</label>
</CustomObject>